# CPP-vcpkg-and-cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  vcpkg.json
src/: main.c  main.cpp  util.c
